# deeplearning-projects

./: .gitignore  README.md  pyproject.toml
cnn/: lenet-5.ipynb
cnn/helpers/: helper_train.py
mlp/: README.md  basic_mlp.ipynb  basic_mlp_adamw.ipynb  basic_mlp_batch_norm.ipynb  basic_mlp_leaky_relu.ipynb  random_experiments.ipynb
mlp/helpers/: helper_datasets.py  helper_evaluation.py  helper_plotting.py  helper_train.py
