[tool.poetry]
name = "deeplearning-projects"
version = "0.1.0"
description = ""
authors = ["Rachit Sengupta <srachit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
